force-app/main/default/objects/SecOps_Scan_Run__c/SecOps_Scan_Run__c.object-meta.xml
<CustomObject>
    <label>SecOps Scan Run</label>
    <nameField>
        <displayFormat>RUN-{0000000}</displayFormat>
        <label>Run ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SecOps Scan Runs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>