force-app/main/default/objects/SecOps_Scan_Run__c/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <label>Error Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>