force-app/main/default/objects/SecOps_Scan_Run__c/fields/Findings_Created__c.field-meta.xml
<CustomField>
    <fullName>Findings_Created__c</fullName>
    <label>Findings Created</label>
    <summaryForeignKey>Security_Finding__c.Scan_Run__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>