force-app/main/default/objects/SecOps_Scan_Run__c/fields/Run_Type__c.field-meta.xml
<CustomField>
    <fullName>Run_Type__c</fullName>
    <label>Run Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Scan</fullName>
                <default>true</default>
                <label>Manual Scan</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Real-Time Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>