force-app/main/default/objects/SecOps_Scan_Run__c/fields/Signals_Evaluated__c.field-meta.xml
<CustomField>
    <fullName>Signals_Evaluated__c</fullName>
    <label>Signals Evaluated</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>